--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+serial (1.0.1) bionic; urgency=low
+
+  * Changed order of modem line control at init.
+
+ -- Eckhart Koeppen <eck@40hz.org>  Mon, 21 Apr 2020 19:56:00 +0200
+
 serial (1.0.0) bionic; urgency=low
 
   * Initial Release.
